# rust-guide

./: .gitignore  .gitlab-ci.yml  .travis.yml  01_introduction.html  02_devenv.html  03_libraries.html  04_language.html  05_memory.html  05_test_fuzz.html  05_typesystem.html  06_1_unsafe_generalities.html  06_2_unsafe_memory.html  06_3_unsafe_ffi.html  06_ffi.html  06_typesystem.html  06_unsafe.html  07_ffi.html  08_testfuzz.html  404.html  CONTRIBUTING.md  Dockerfile  LICENCE.html  LICENSE.html  README.md  SECURITY.md  book.toml  book.toml.en  book.toml.fr  central_traits.html  checklist.html  custom-envs-8d117517.js  custom-envs.css  devenv.html  en.pws  errors.html  flake.nix  fr.pws  guarantees.html  index.html  integer.html  (+15 more)
.github/workflows/: deploy.yml  rust.yaml
examples/: Cargo.toml
examples/src/: counter.c  counter.h  counter.rs  ffi.c  ffi.rs  generalities.rs  integer.rs  lib.rs  memory.rs  typesystem.rs
examples/unsafe2/: Cargo.toml
fr/: 01_introduction.html  02_devenv.html  03_libraries.html  04_language.html  05_memory.html  05_typesystem.html  06_1_unsafe_generalities.html  06_2_unsafe_memory.html  06_3_unsafe_ffi.html  06_typesystem.html  06_unsafe.html  07_ffi.html  404.html  LICENSE.html  central_traits.html  checklist.html  custom-envs-59fe9022.css  custom-envs.css  devenv.html  errors.html  guarantees.html  index.html  integer.html  introduction.html  libraries.html  naming.html  pagetoc.css  print.html  searcher-c2a407aa.js  searchindex-0799d340.js  searchindex.js  searchindex.json  standard.html  toc-c0394a0f.js  toc.html  toc.js  unsafe.html  vars-fr-a9481740.js
fr/html/: central_traits.html  errors.html  integer.html  libraries.html  naming.html  searchindex.js  toc.html  unsafe.html
fr/unsafe/: ffi.html  generalities.html  memory.html
html/: 404.html  central_traits.html  checklist.html  errors.html  print.html  standard.html  unsafe.html
mdbook-checklist/: Cargo.toml  README.md
mdbook-checklist/example/: book.toml
mdbook-checklist/example/src/: chapter_1.md  chapter_2.md
mdbook-checklist/src/: checklist.rs  checklist_pre.rs  main.rs
mdbook-code-align/: Cargo.toml
mdbook-code-align/src/: align.rs  main.rs  semindent.rs
mdbook-extensions/: Cargo.toml
mdbook-extensions/src/: cite.rs  extensions.rs  main.rs
mdbook-plugins/: Cargo.toml
mdbook-plugins/mdbook-checklist/: Cargo.toml
mdbook-plugins/mdbook-checklist/src/: checklist.rs  checklist_pre.rs  main.rs
mdbook-plugins/mdbook-code-align/: Cargo.toml
mdbook-plugins/mdbook-code-align/src/: align.rs  main.rs
mdbook-plugins/mdbook-extensions/: Cargo.toml
mdbook-plugins/mdbook-extensions/src/: cite.rs  extensions.rs  main.rs  spellcheck.rs
mdbook-plugins/mdbook-extensions/src/grammarcheck/: mod.rs
src/: 01_introduction.md  02_devenv.md  03_libraries.md  04_language.md  05_memory.md  05_test_fuzz.md  06_ffi.md  06_safety_pitfalls.md  06_typesystem.md  07_ffi.md  08_testfuzz.md  RECOS.md  SUMMARY.md
src/en/: 02_devenv.md  (+26 more)
unsafe/: ffi.html  generalities.html  memory.html
(+44 files in other folders)
