[workspace]
resolver = "3"
members = ["mdbook-checklist", "mdbook-code-align", "mdbook-extensions"]

[workspace.dependencies]

mdbook-preprocessor = { version = "0.5.2" }
mdbook-markdown = { version = "0.5.2" }
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
semver = "1.0.26"
serde_json = "1.0.143"
serde = "1.0.219"
serde_yaml_ng = "0.10.0"
regex = "1.11.3"
log = "0.4.29"
env_logger = "0.11.9"
tempfile = "3.27.0"
quick-xml = "0.38.3"
toml = "0.5"

markdown = { version = "1.0.0", features = ["serde"] }
