[package]
name = "mdbook-checklist"
version = "0.2.0"
authors = ["Aurélien Deharbe <aurelien.deharbe@ssi.gouv.fr>"]
edition = "2021"
description = "An mdBook preprocessor for generating checklists and indexes."
keywords = ["mdbook", "markdown", "preprocessor"]
readme = "README.md"
license-file = "LICENSE.md"

[dependencies]
clap = { workspace = true }
mdbook = { workspace = true }
pulldown-cmark = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
