[package]
name = "mdbook-extensions"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
mdbook = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
pulldown-cmark = { workspace = true }
tempfile = { workspace = true }
